@@ -1534,3 +1534,7 @@ table.multipageimage td {
 .imagelist th.TablePager_sort { background-color: #ccccff }
 
 .templatesUsed { margin-top: 1.5em; }
+
+.mw-summary-preview {
+	margin: 0.1em 0;
+}
