@@ -181,8 +181,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 3687) Add distinct heading for media files in category display.
 * (bug 1578) Add different icons for external links to audio, video, or PDF in
   Monobook.
-* Made autoblocks block account creation if the user block has that bit set.
+* Made autoblocks block account creation if the user block has that option enabled.
 * Add auto-summaries to blankings and large removals without summaries.
+* (bug 7811) Allow preview of edit summaries.
 
 == Languages updated ==
 
